--- a/styles/bundles2.module.css
+++ b/styles/bundles2.module.css
@@ -9,15 +9,21 @@
     grid-column: 2;
 }
 
+
+.cardImage span {
+    width: 100%!important;
+    height: 250px!important;
+    border-bottom: 2px solid #0f2733 !important;
+}
+
 .bundlesCard {
-    margin-top: 25px;
-    border: 5px solid #0f2733;
-    min-width: 320px;
-    max-width: 320px;
-    height: 500px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
+    border: 2px solid #0f2733;
+        min-width: 320px;
+        max-width: 320px;
+        min-height: 500px;
+       
+        display: grid;
+        grid-template-rows: 1fr 8fr 1fr;
 }
 
 .bundlesCard .cardHeader h5 {
@@ -30,20 +36,20 @@
 
 .bundlesCard .cardHeader {
     justify-self: left;
-    height: 10%;
-    display: grid;
-    width: 100%;
-    align-self: center;
-    border-bottom: 2px solid #0f2733;
+        height: 100%;
+        display: grid;
+        width: 100%;
+        align-self: center;
+        border-bottom: 2px solid #0f2733;
 }
 
 .bundlesCard .cardContent {
-    height: 80%;
+    height: 100%;
 }
 
 .bundlesCard .cardButton {
     justify-self: left;
-    height: 10%;
+    height: 100%;
     display: grid;
     background-color: #0f2733;
     width: 100%;
@@ -63,9 +69,9 @@
 }
 
 .bundlesCard .cardContent {
-    height: 80%;
+    height: 100%;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 3fr 2fr;
 }
 
 .bundlesCard .cardContent .cardDesc {
@@ -73,4 +79,9 @@
     align-self: center;
     line-height: 20px;
     max-width: 90%;
+   
+}
+.cardDesc p {
+    font-size: 16px;
+    line-height: 24px;
 }
