--- a/styles/component4.module.css
+++ b/styles/component4.module.css
@@ -16,6 +16,11 @@
     max-width: 90%;
     margin: 0 auto;
 }
+.cardImage span {
+    width: 100%!important;  
+    border-bottom: 2px solid #0f2733 !important;
+    height: 275px!important;
+}
 .cardButton a {
     text-decoration: none;
     color: #f5f5f5;
@@ -37,11 +42,11 @@
 }
 
 .bundlesCard {
-    border: 5px solid #0f2733;
+    border: 2px solid #0f2733;
     min-width: 320px;
     max-width: 320px;
-    height: 500px;
-    border-radius: 5px;
+    min-height: 500px;
+    
     display: flex;
     flex-direction: column;
 }
